revised file path

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="navbar-fixed">
           <nav class="nav-wrapper orange accent-4" style="font-family: 'Raleway', sans-serif;height: 100px">
-            <a href="/Users/arthurapplegate/Documents/GitHub/bucket1/p1/index.html" class="brand-logo" style="padding-left: 10px"><img src="/Users/arthurapplegate/Documents/GitHub/bucket1/p1/Pics/logo.png" alt="logo" height="100" width="auto"></a>
+            <a href="index.html" class="brand-logo" style="padding-left: 10px"><img src="pics/logo.png" alt="logo" height="100" width="auto"></a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons black-text">menu</i></a>
             <ul class="right hide-on-med-and-down">
               <li><a class="black-text" href="#about">About Me</a></li>
