--- a/index.html
+++ b/index.html
@@ -1,139 +1,138 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Hunt Applegate: A Web Developer</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div class="navbar-fixed">
-          <nav class="nav-wrapper orange accent-4" style="font-family: 'Raleway', sans-serif;height: 100px">
-            <a href="index.html" class="brand-logo" style="padding-left: 10px"><img src="pics/logo.png" alt="logo" height="100" width="auto"></a>
-            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons black-text">menu</i></a>
-            <ul class="right hide-on-med-and-down">
-              <li><a class="black-text" href="#about">About Me</a></li>
-              <li><a class="black-text" href="#projects">My Projects</a></li>
-              <li><a class="black-text" href="#contact">Contact Me</a></li>
-              <li><a class="black-text" href="sass.html"><i class="material-icons">play_arrow</i></a></li>
-              <li><a class="black-text" href="badges.html"><i class="material-icons">pause</i></a></li>
-              <li><a class="black-text" href="sass.html"><i class="material-icons">stop</i></a></li>
-            </ul>
-          </nav>
-        </div>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hunt Applegate: A Web Developer</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+  <link rel="stylesheet" href="style.css">
+</head>
 
-
-      <ul class="sidenav" id="mobile-demo">
+<body>
+  <div class="navbar-fixed">
+    <nav class="nav-wrapper orange accent-4" style="font-family: 'Raleway', sans-serif;height: 100px">
+      <a href="index.html" class="brand-logo" style="padding-left: 10px"><img src="pics/logo.png" alt="logo" height="100"
+          width="auto"></a>
+      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons black-text">menu</i></a>
+      <ul class="right hide-on-med-and-down">
         <li><a class="black-text" href="#about">About Me</a></li>
         <li><a class="black-text" href="#projects">My Projects</a></li>
         <li><a class="black-text" href="#contact">Contact Me</a></li>
-        <li><a class="black-text" href="sass.html"><i class="material-icons">play_arrow</i></a></li>
+        <!-- <li><a class="black-text" href="sass.html"><i class="material-icons">play_arrow</i></a></li>
         <li><a class="black-text" href="badges.html"><i class="material-icons">pause</i></a></li>
-        <li><a class="black-text" href="sass.html"><i class="material-icons">stop</i></a></li>
+        <li><a class="black-text" href="sass.html"><i class="material-icons">stop</i></a></li> -->
       </ul>
+    </nav>
+  </div>
 
-      <div class="parallax-container">
-        <div class="parallax">
-          <img src="pics/costa12.jpg" style="width: 100%; height: auto">
+
+
+  <ul class="sidenav" id="mobile-demo">
+    <li><a class="black-text" href="#about">About Me</a></li>
+    <li><a class="black-text" href="#projects">My Projects</a></li>
+    <li><a class="black-text" href="#contact">Contact Me</a></li>
+    <li><a class="black-text" href="sass.html"><i class="material-icons">play_arrow</i></a></li>
+    <li><a class="black-text" href="badges.html"><i class="material-icons">pause</i></a></li>
+    <li><a class="black-text" href="sass.html"><i class="material-icons">stop</i></a></li>
+  </ul>
+
+  <div class="parallax-container">
+    <div class="parallax">
+      <img src="pics/costa12.jpg" style="width: 100%; height: auto">
+    </div>
+  </div>
+  <div id="about" class="section scrollspy white">
+    <div class="row container">
+      <h2 class="header">About Me</h2>
+      <p>After running an insurance agency for five years, I realized that I was ready for a new challenge. I've always
+        enjoyed problem solving and logic problems. In addition I've always dreamed of designing and building useful
+        tools. These two interests led me to explore the world of computer programming.</p>
+      <p>I joined the Galvanize community to dive deeper. I'm currently enrolled in the Web Development Immersive
+        Program to become a full stack web developer. I enjoy learning. I have the ability to motivate myself to create
+        a new business or a new project. I have experience in starting and managing a business, presenting a product,
+        and maintaining a client base. Outside of class I am working on a development team to convert a website to
+        Angular and add new functionality. I'm always willing to support the team in whatever needs to be done.</p>
+      <p>When I'm not in-front of the computer, I'm outside enjoying the beautiful mountains. I enjoy hiking,
+        fly-fishing, camping, and skiing. I'm a member of social clubs for travel, learning Spanish, and computer
+        programming. I'm a believer in meditation and living a healthy lifestyle.</p>
+    </div>
+  </div>
+  <div class="parallax-container">
+    <div class="parallax"><img src="pics/silver2.jpg" style="width: 100%; height: auto">
+    </div>
+  </div>
+  <div id="projects" class="section scrollspy white">
+    <div class="row container">
+      <h2 class="header">My Projects</h2>
+      <div class="carousel carousel-slider center">
+        <div id="one" class="carousel-item white-text" href="#one!">
+          <a href="https://www.whatstheweatherin.com/" target="_blank">
+            <h2>What's the Weather In</h2>
+          </a>
+          <img src="https://media.giphy.com/media/4T088USxC1i7sovB01/giphy.gif" alt="earth spinning" style="width: auto; height: auto">
+          <p class="white-text">Mobile web application that provides a 5-day weather forecast</p>
+        </div>
+        <div id="two" class="carousel-item grey black-text" href="#two!">
+          <h2>Second Panel</h2>
+          <p class="black-text">This is your second panel</p>
+        </div>
+        <div id="three" class="carousel-item grey black-text" href="#three!">
+          <h2>Third Panel</h2>
+          <p class="black-text">This is your third panel</p>
+        </div>
+        <div id="four" class="carousel-item grey black-text" href="#four!">
+          <h2>Fourth Panel</h2>
+          <p class="black-text">This is your fourth panel</p>
         </div>
       </div>
-      <div id="about" class="section scrollspy white">
-        <div class="row container">
-          <h2 class="header">About Me</h2>
-            <p>After running an insurance agency for five years, I realized that I was ready for a new challenge. I've always enjoyed problem solving and logic problems. In addition I've always dreamed of designing and building useful tools. These two interests led me to explore the world of computer programming.</p>
-            <p>I joined the Galvanize community to dive deeper. I'm currently enrolled in the Web Development Immersive Program to become a full stack web developer. I enjoy learning. I have the ability to motivate myself to create a new business or a new project. I have experience in starting and managing a business, presenting a product, and maintaining a client base. Outside of class I am working on a development team to convert a website to Angular and add new functionality. I'm always willing to support the team in whatever needs to be done.</p>
-            <p>When I'm not in-front of the computer, I'm outside enjoying the beautiful mountains. I enjoy hiking, fly-fishing, camping, and skiing. I'm a member of social clubs for travel, learning Spanish, and computer programming. I'm a believer in meditation and living a healthy lifestyle.</p>
-        </div>
+    </div>
+    <div class="row">
+      <div id="control" class="center-align">
+        <a id="prev" class="btn orange accent-4 button prev"><i class="material-icons prev">arrow_back</i></a>
+        <a id="next" class="btn orange accent-4 button next"><i class="material-icons next">arrow_forward</i></a>
       </div>
-      <div class="parallax-container">
-        <div class="parallax"><img src="pics/silver2.jpg" style="width: 100%; height: auto">
-        </div>
-      </div>
-      <div id="projects" class="section scrollspy white">
-        <div class="row container">
-          <h2 class="header">My Projects</h2>
-          <div class="carousel carousel-slider center">
-            <div class="carousel-fixed-item center">
-              <a class="btn waves-effect white black-text">shazam</a>
-              <a class="btn waves-effect white black-text">hello</a>
-            </div>
-            <div class="carousel-item grey black-text" href="#one!">
-              <h2>Project 1</h2>
-              <p class="black-text">This is your first panel</p>
-            </div>
-            <div class="carousel-item grey black-text" href="#two!">
-              <h2>Second Panel</h2>
-              <p class="black-text">This is your second panel</p>
-            </div>
-            <div class="carousel-item grey black-text" href="#three!">
-              <h2>Third Panel</h2>
-              <p class="black-text">This is your third panel</p>
-            </div>
-            <div class="carousel-item grey black-text" href="#four!">
-              <h2>Fourth Panel</h2>
-              <p class="black-text">This is your fourth panel</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="parallax-container">
-        <div class="parallax"><img src="pics/moab1.jpg" style="width: 100%; height: auto">
-        </div>
-      </div>
-      <div id="contact" class="section scrollspy white">
-        <div class="row container">
-          <h2 class="header">Contact Me</h2>
+    </div>
+  </div>
+  <div class="parallax-container">
+    <div class="parallax"><img src="pics/moab1.jpg" style="width: 100%; height: auto">
+    </div>
+  </div>
+  <div id="contact" class="section scrollspy white">
+    <div class="row container">
+      <h2 class="header">Contact Me</h2>
+      <div class="row">
+        <form id="form" class="col s12">
           <div class="row">
-            <form class="col s12">
-              <div class="row">
-                <div class="input-field col s6">
-                  <input placeholder="Placeholder" id="first_name" type="text" class="validate">
-                  <label for="first_name">First Name</label>
-                </div>
-                <div class="input-field col s6">
-                  <input id="last_name" type="text" class="validate">
-                  <label for="last_name">Last Name</label>
-                </div>
-              </div>
-              <!-- <div class="row">
-                <div class="input-field col s12">
-                  <input disabled value="I am not editable" id="disabled" type="text" class="validate">
-                  <label for="disabled">Disabled</label>
-                </div>
-              </div> -->
-              <!-- <div class="row">
-                <div class="input-field col s12">
-                  <input id="password" type="password" class="validate">
-                  <label for="password">Password</label>
-                </div>
-              </div> -->
-              <div class="row">
-                <div class="input-field col s12">
-                  <input id="email" type="email" class="validate">
-                  <label for="email">Email</label>
-                </div>
-              </div>
-              <!-- <div class="row">
-                <div class="col s12">This is an inline input field:
-                  <div class="input-field inline">
-                    <input id="email_inline" type="email" class="validate">
-                    <label for="email_inline">Email</label>
-                    <span class="helper-text" data-error="wrong" data-success="right">Helper text</span>
-                  </div>
-                </div>
-              </div> -->
-            </form>
-
+            <div class="input-field col s6">
+              <input placeholder="Placeholder" id="first_name" type="text" class="validate" required>
+              <label for="first_name">First Name</label>
+            </div>
+            <div class="input-field col s6">
+              <input id="last_name" type="text" class="validate">
+              <label for="last_name">Last Name</label>
+            </div>
           </div>
-        </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="email" type="email" class="validate" required>
+              <label for="email">Email</label>
+            </div>
+          </div>
+          <div class="row">
+            <input type=submit value="Submit" class="btn orange accent-4 button">
+          </div>
+      </div>
+      </form>
+    </div>
+  </div>
 
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-      <!-- <script type="text/javascript" src="jquery-3.3.1.js"></script> -->
-      <!-- <script type="text/javascript" src="materialize/js/materialize.js"></script> -->
-      <script type="text/javascript" src="app.js"></script>
-  </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+  <script type="text/javascript" src="app.js"></script>
+</body>
+
 </html>
