--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
   <div class="navbar-fixed">
     <nav class="nav-wrapper orange accent-4" style="font-family: 'Raleway', sans-serif;height: 100px">
-      <a href="index.html" class="brand-logo" style="padding-left: 10px"><img src="pics/logo.png" alt="logo" height="100"
-          width="auto"></a>
+      <a href="index.html" class="brand-logo" style="padding-left: 10px"><img src="./assets/pics/logo.png" alt="logo"
+          height="100" width="auto"></a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons black-text">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a class="black-text" href="#about">About Me</a></li>
@@ -41,7 +41,7 @@
 
   <div class="parallax-container">
     <div class="parallax">
-      <img src="pics/costa12.jpg" style="width: 100%; height: auto">
+      <img src="./assets/pics/costa12.jpg" style="width: 100%; height: auto">
     </div>
   </div>
   <div id="about" class="section scrollspy white">
@@ -61,7 +61,7 @@
     </div>
   </div>
   <div class="parallax-container">
-    <div class="parallax"><img src="pics/silver2.jpg" style="width: 100%; height: auto">
+    <div class="parallax"><img src="./assets/pics/silver2.jpg" style="width: 100%; height: auto">
     </div>
   </div>
   <div id="projects" class="section scrollspy white">
@@ -75,18 +75,22 @@
           <img src="https://media.giphy.com/media/4T088USxC1i7sovB01/giphy.gif" alt="earth spinning" style="width: auto; height: auto">
           <p class="white-text">Mobile web application that provides a 5-day weather forecast</p>
         </div>
-        <div id="two" class="carousel-item grey black-text" href="#two!">
-          <h2>Second Panel</h2>
-          <p class="black-text">This is your second panel</p>
+        <div id="two" class="carousel-item black-text" href="#two!">
+          <a href="https://moviebuddy.surge.sh/" target="_blank"><img src="./assets/logos/movie-buddy-logo.png" alt="movie buddy logo"
+              style="width: 500px; height: auto"></a>
+          <div>
+            <img src="./assets/logos/movie-buddy-select.png" alt="movie buddy logo" style="width: 250px; height: auto">
+          </div>
+          <p class="black-text">Web application that matches users with based on their movie wish list</p>
         </div>
-        <div id="three" class="carousel-item grey black-text" href="#three!">
+        <!-- <div id="three" class="carousel-item grey black-text" href="#three!">
           <h2>Third Panel</h2>
           <p class="black-text">This is your third panel</p>
         </div>
         <div id="four" class="carousel-item grey black-text" href="#four!">
           <h2>Fourth Panel</h2>
           <p class="black-text">This is your fourth panel</p>
-        </div>
+        </div> -->
       </div>
     </div>
     <div class="row">
@@ -97,7 +101,7 @@
     </div>
   </div>
   <div class="parallax-container">
-    <div class="parallax"><img src="pics/moab1.jpg" style="width: 100%; height: auto">
+    <div class="parallax"><img src="./assets/pics/moab1.jpg" style="width: 100%; height: auto">
     </div>
   </div>
   <div id="contact" class="section scrollspy white">
