--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="row container">
       <h2 class="header">Contact Me</h2>
       <div class="row">
-        <form id="form" class="col s12">
+        <form id="form" class="col s12" name="contact" method="POST" netlify>
           <div class="row">
             <div class="input-field col s6">
               <input placeholder="Placeholder" id="first_name" type="text" class="validate" required>
