added input type file

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
             </div>
           </div>
           <div class="row">
+            <input type="file">
             <input type=submit value="Submit" class="btn orange accent-4 button">
           </div>
       </div>
