--- a/index.html
+++ b/index.html
@@ -108,55 +108,45 @@
     <div class="row container">
       <h2 class="header">Contact Me</h2>
       <div class="row">
-        <form id="form" class="col s12" name="contact" method="POST" netlify>
-          <div class="row">
-            <div class="input-field col s6">
-              <input placeholder="Placeholder" id="first_name" type="text" class="validate" required>
-              <label for="first_name">First Name</label>
-            </div>
-            <div class="input-field col s6">
-              <input id="last_name" type="text" class="validate">
-              <label for="last_name">Last Name</label>
-            </div>
-          </div>
-          <div class="row">
-            <div class="input-field col s12">
-              <input id="email" type="email" class="validate" required>
-              <label for="email">Email</label>
-            </div>
-          </div>
-          <div class="row">
-            <input type=submit value="Submit" class="btn orange accent-4 button">
-          </div>
+        <form name="contact" method="POST" netlify>
+          <p>
+            <input type="text" name="name" placeholder="Name" />
+          </p>
+          <p>
+            <input type="email" name="email" placeholder="Email" />
+          </p>
+          <p>
+            <input name="comments" placeholder="Comments">
+          </p>
+          <p>
+            <label>
+              <input type="checkbox" />
+              <span>Web</span>
+            </label>
+          </p>
+          <p>
+            <label>
+              <input type="checkbox" />
+              <span>Mobile</span>
+            </label>
+          </p>
+          <p>
+            <label>
+              <input type="checkbox" />
+              <span>Games</span>
+            </label>
+          </p>
+          <p>
+            <button type="text" class="btn orange accent-4 button" type="submit">Send</button>
+          </p>
+        </form>
       </div>
-      </form>
-      <form name="contact2" method="POST" netlify>
-        <p>
-          <label>Your Name: <input type="text" name="name" /></label>
-        </p>
-        <p>
-          <label>Your Email: <input type="email" name="email" /></label>
-        </p>
-        <p>
-          <label>Your Role: <select name="role[]" multiple>
-              <option value="leader">Leader</option>
-              <option value="follower">Follower</option>
-            </select></label>
-        </p>
-        <p>
-          <label>Message: <textarea name="message"></textarea></label>
-        </p>
-        <p>
-          <button type="submit">Send</button>
-        </p>
-      </form>
     </div>
-  </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-  <script type="text/javascript" src="app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
+    <script type="text/javascript" src="app.js"></script>
 </body>
 
 </html>
