--- a/index.html
+++ b/index.html
@@ -120,20 +120,20 @@
           </p>
           <p>
             <label>
-              <input type="checkbox" />
+              <input type="checkbox" name="1" value="web" />
               <span>Web</span>
             </label>
           </p>
           <p>
             <label>
-              <input type="checkbox" />
+              <input type="checkbox" name="2" value="mobile" />
               <span>Mobile</span>
             </label>
           </p>
           <p>
             <label>
-              <input type="checkbox" />
-              <span>Games</span>
+              <input type="checkbox" name="3" value="game" />
+              <span>Game</span>
             </label>
           </p>
           <p>
