--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
       <div class="row">
         <form name="contact" method="POST" netlify>
           <p>
-            <input type="text" name="name" placeholder="Name" />
+            <input type="text" name="name" placeholder="Name" required />
           </p>
           <p>
-            <input type="email" name="email" placeholder="Email" />
+            <input type="email" name="email" placeholder="Email" required />
           </p>
           <p>
             <input name="comments" placeholder="Comments">
