--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div>
             <img src="./assets/logos/movie-buddy-select.png" alt="movie buddy logo" style="width: 250px; height: auto">
           </div>
-          <p class="black-text">Web application that matches users with based on their movie wish list</p>
+          <p class="black-text">Mobile web application that matches users based on their movie wish list</p>
         </div>
         <!-- <div id="three" class="carousel-item grey black-text" href="#three!">
           <h2>Third Panel</h2>
