moved projects up

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           height="100" width="auto"></a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons black-text">menu</i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a class="black-text" href="#about">About Me</a></li>
-        <li><a class="black-text" href="#projects">My Projects</a></li>
-        <li><a class="black-text" href="#contact">Contact Me</a></li>
+        <li><a class="black-text" href="#projects">Projects</a></li>
+        <li><a class="black-text" href="#about">About</a></li>
+        <li><a class="black-text" href="#contact">Contact</a></li>
         <!-- <li><a class="black-text" href="sass.html"><i class="material-icons">play_arrow</i></a></li>
         <li><a class="black-text" href="badges.html"><i class="material-icons">pause</i></a></li>
         <li><a class="black-text" href="sass.html"><i class="material-icons">stop</i></a></li> -->
@@ -31,13 +31,51 @@
 
 
   <ul class="sidenav" id="mobile-demo">
-    <li><a class="black-text" href="#about">About Me</a></li>
-    <li><a class="black-text" href="#projects">My Projects</a></li>
-    <li><a class="black-text" href="#contact">Contact Me</a></li>
+
+    <li><a class="black-text" href="#projects">Projects</a></li>
+    <li><a class="black-text" href="#about">About</a></li>
+    <li><a class="black-text" href="#contact">Contact</a></li>
     <li><a class="black-text" href="sass.html"><i class="material-icons">play_arrow</i></a></li>
     <li><a class="black-text" href="badges.html"><i class="material-icons">pause</i></a></li>
     <li><a class="black-text" href="sass.html"><i class="material-icons">stop</i></a></li>
   </ul>
+
+  <div id="projects" class="section scrollspy white">
+    <div class="row container">
+      <h2 class="header">My Projects</h2>
+      <div class="carousel carousel-slider center">
+        <div id="one" class="carousel-item white-text" href="#one!">
+          <a href="https://www.whatstheweatherin.com/" target="_blank">
+            <h2>What's the Weather In</h2>
+          </a>
+          <img src="https://media.giphy.com/media/4T088USxC1i7sovB01/giphy.gif" alt="earth spinning" style="width: auto; height: auto">
+          <p class="white-text">Mobile web application that provides a 5-day weather forecast</p>
+        </div>
+        <div id="two" class="carousel-item black-text" href="#two!">
+          <a href="https://moviebuddy.surge.sh/" target="_blank"><img src="./assets/logos/movie-buddy-logo.png" alt="movie buddy logo"
+              style="width: 500px; height: auto"></a>
+          <div>
+            <img src="./assets/logos/movie-buddy-select.png" alt="movie buddy logo" style="width: 250px; height: auto">
+          </div>
+          <p class="black-text">Mobile web application that matches users based on their movie wish list</p>
+        </div>
+        <!-- <div id="three" class="carousel-item grey black-text" href="#three!">
+          <h2>Third Panel</h2>
+          <p class="black-text">This is your third panel</p>
+        </div>
+        <div id="four" class="carousel-item grey black-text" href="#four!">
+          <h2>Fourth Panel</h2>
+          <p class="black-text">This is your fourth panel</p>
+        </div> -->
+      </div>
+    </div>
+    <div class="row">
+      <div id="control" class="center-align">
+        <a id="prev" class="btn orange accent-4 button prev"><i class="material-icons prev">arrow_back</i></a>
+        <a id="next" class="btn orange accent-4 button next"><i class="material-icons next">arrow_forward</i></a>
+      </div>
+    </div>
+  </div>
 
   <div class="parallax-container">
     <div class="parallax">
