--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="navbar-fixed">
-    <nav class="nav-wrapper orange accent-4" style="font-family: 'Raleway', sans-serif;height: 100px">
+    <nav class="nav-wrapper" style="font-family: 'Raleway', sans-serif;height: 100px">
       <a href="index.html" class="brand-logo" style="padding-left: 10px"><img src="./assets/pics/logo.png" alt="logo"
           height="100" width="auto"></a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons black-text">menu</i></a>
@@ -102,46 +102,7 @@
     <div class="parallax"><img src="./assets/pics/silver2.jpg" style="width: 100%; height: auto">
     </div>
   </div>
-  <div id="projects" class="section scrollspy white">
-    <div class="row container">
-      <h2 class="header">My Projects</h2>
-      <div class="carousel carousel-slider center">
-        <div id="one" class="carousel-item white-text" href="#one!">
-          <a href="https://www.whatstheweatherin.com/" target="_blank">
-            <h2>What's the Weather In</h2>
-          </a>
-          <img src="https://media.giphy.com/media/4T088USxC1i7sovB01/giphy.gif" alt="earth spinning" style="width: auto; height: auto">
-          <p class="white-text">Mobile web application that provides a 5-day weather forecast</p>
-        </div>
-        <div id="two" class="carousel-item black-text" href="#two!">
-          <a href="https://moviebuddy.surge.sh/" target="_blank"><img src="./assets/logos/movie-buddy-logo.png" alt="movie buddy logo"
-              style="width: 500px; height: auto"></a>
-          <div>
-            <img src="./assets/logos/movie-buddy-select.png" alt="movie buddy logo" style="width: 250px; height: auto">
-          </div>
-          <p class="black-text">Mobile web application that matches users based on their movie wish list</p>
-        </div>
-        <!-- <div id="three" class="carousel-item grey black-text" href="#three!">
-          <h2>Third Panel</h2>
-          <p class="black-text">This is your third panel</p>
-        </div>
-        <div id="four" class="carousel-item grey black-text" href="#four!">
-          <h2>Fourth Panel</h2>
-          <p class="black-text">This is your fourth panel</p>
-        </div> -->
-      </div>
-    </div>
-    <div class="row">
-      <div id="control" class="center-align">
-        <a id="prev" class="btn orange accent-4 button prev"><i class="material-icons prev">arrow_back</i></a>
-        <a id="next" class="btn orange accent-4 button next"><i class="material-icons next">arrow_forward</i></a>
-      </div>
-    </div>
-  </div>
-  <div class="parallax-container">
-    <div class="parallax"><img src="./assets/pics/moab1.jpg" style="width: 100%; height: auto">
-    </div>
-  </div>
+
   <div id="contact" class="section scrollspy white">
     <div class="row container">
       <h2 class="header">Contact Me</h2>
