--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="navbar-fixed">
     <nav class="nav-wrapper" style="font-family: 'Raleway', sans-serif;height: 100px">
-      <a href="index.html" class="brand-logo" style="padding-left: 10px"><img src="./assets/pics/logo.png" alt="logo"
+      <a href="index.html" class="brand-logo center" style="padding-left: 10px"><img src="./assets/pics/logo.png" alt="logo"
           height="100" width="auto"></a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons black-text">menu</i></a>
       <ul class="right hide-on-med-and-down">
@@ -88,12 +88,11 @@
       <p>After running an insurance agency for five years, I realized that I was ready for a new challenge. I've always
         enjoyed problem solving and logic problems. In addition I've always dreamed of designing and building useful
         tools. These two interests led me to explore the world of computer programming.</p>
-      <p>I joined the Galvanize community to dive deeper. I'm currently enrolled in the Web Development Immersive
-        Program to become a full stack web developer. I enjoy learning. I have the ability to motivate myself to create
-        a new business or a new project. I have experience in starting and managing a business, presenting a product,
-        and maintaining a client base. Outside of class I am working on a development team to convert a website to
-        Angular and add new functionality. I'm always willing to support the team in whatever needs to be done.</p>
-      <p>When I'm not in-front of the computer, I'm outside enjoying the beautiful mountains. I enjoy hiking,
+      <p>I joined the Galvanize community to dive deeper. I reacently graduated from the Web Development Immersive
+        Program. It's a 6 month program that takes you from the basics to full stack web development. After graduating
+        I realized that this was only the beginning of my journey into software engineering. I'm currently working on a
+        React, Redux project to sharpen my skills. Please check out my blog for more on my latest projects.</p>
+      <p>When I'm not coding, I'm outside enjoying the beautiful mountains. I enjoy hiking,
         fly-fishing, camping, and skiing. I'm a member of social clubs for travel, learning Spanish, and computer
         programming. I'm a believer in meditation and living a healthy lifestyle.</p>
     </div>
