--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
       </a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons black-text">menu</i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a class="white-text" href="#projects">Projects</a></li>
-        <li><a class="white-text" href="#about">About</a></li>
-        <li><a class="white-text" href="#contact">Contact</a></li>
-        <!-- <li><a class="black-text" href="sass.html"><i class="material-icons">play_arrow</i></a></li>
-        <li><a class="black-text" href="badges.html"><i class="material-icons">pause</i></a></li>
-        <li><a class="black-text" href="sass.html"><i class="material-icons">stop</i></a></li> -->
+        <li><a href="#projects">PROJECTS</a></li>
+        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#resume">RESUME</a></li>
+        <li><a href="#contact">CONTACT</a></li>
       </ul>
     </nav>
   </div>
@@ -36,13 +34,10 @@
 
 
   <ul class="sidenav" id="mobile-demo">
-
-    <li><a class="black-text" href="#projects">Projects</a></li>
-    <li><a class="black-text" href="#about">About</a></li>
-    <li><a class="black-text" href="#contact">Contact</a></li>
-    <li><a class="black-text" href="sass.html"><i class="material-icons">play_arrow</i></a></li>
-    <li><a class="black-text" href="badges.html"><i class="material-icons">pause</i></a></li>
-    <li><a class="black-text" href="sass.html"><i class="material-icons">stop</i></a></li>
+    <li><a href="#projects">PROJECTS</a></li>
+    <li><a href="#about">ABOUT</a></li>
+    <li><a href="#resume">RESUME</a></li>
+    <li><a href="#contact">CONTACT</a></li>
   </ul>
 
   <div id="projects" class="section scrollspy white">
@@ -90,46 +85,50 @@
       <h4 class="header">ABOUT ME</h4>
       <p class="break"></p>
       <br></br>
-      <div>
-        <img src="assets/pics/jshaun.png">
-        <br></br>
-        <span class="about"></span>
+      <img src="assets/headshots/jshaun.png">
+      <br></br>
+      <span class="about"></span>
 
-        <p>Shortly after graduating college, I started my own insurance agency, Applegate
-          Consulting. After growing my
-          practice for 7 years, I was ready for a new challenge. I've always enjoyed problem solving and building
-          things.
-          These two interests led me to coding.</p>
+      <p>Shortly after graduating college, I started my own insurance agency, <a class="inline-link" href="http://wwww.healthadvising.com">Applegate
+          Consulting</a>. After growing my
+        practice for 7 years, I was ready for a new challenge. I've always enjoyed problem solving and building
+        things.
+        These two interests led me to coding.</p>
 
-        <p>In 2017, I got my first taste of programming. I took a part-time class
-          with the Data Science program at Galvanize in Denver. I knew I was getting into something that could
-          challenge
-          me. I really enjoyed the challenge and the culture at Galvanize. I decided this was my next career! I
-          enrolled
-          in
-          the Web Development Immersive
-          Program through Galvanize in June of 2018. The 6 month program takes you from the basics to full stack web
-          development. I fought hard to gain as much knowledge as I could about Javascript, React.js, Node.js, and
-          other technologies.
-          I completed the infamous capstone project, where you are challeged to incorporate multiple new
-          technologies into a full stack application, generate a demo, and deliver a presentation within a week. After
-          graduation
-          I realized though that my journey into software development had only just begun.</p>
-        <p>I'm currently working on a
-          React, Redux full stack application to get more comfortable with the Redux flow. Please contact me if you
-          have
-          any interest in my projects. Check out my blog for more on my latest projects!</p>
-        <p>When I'm not coding, I'm outside enjoying the beautiful mountains. I enjoy hiking,
-          fly-fishing, camping, and skiing. I'm a member of social clubs for travel, learning Spanish, and computer
-          programming. I'm a believer in meditation and living a healthy lifestyle.</p>
-      </div>
+      <p>In 2017, I got my first taste of programming. I took a part-time class
+        with the Data Science program at Galvanize in Denver. I knew I was getting into something that could
+        challenge
+        me. I really enjoyed the challenge and the culture at Galvanize. I decided this was my next career! I
+        enrolled
+        in
+        the Web Development Immersive
+        Program through Galvanize in June of 2018. The 6 month program takes you from the basics to full stack web
+        development. I fought hard to gain as much knowledge as I could about Javascript, React.js, Node.js, and
+        other technologies.
+        I completed the infamous capstone project, where you are challeged to incorporate multiple new
+        technologies into a full stack application, generate a demo, and deliver a presentation within a week. After
+        graduation
+        I realized though that my journey into software development had only just begun.</p>
+      <p>I'm currently working on a
+        React, Redux full stack application to get more comfortable with the Redux flow. Please contact me if you
+        have
+        any interest in my projects. Check out my blog for more on my latest projects!</p>
+      <p>When I'm not coding, I'm outside enjoying the beautiful mountains. I enjoy hiking,
+        fly-fishing, camping, and skiing. I'm a member of social clubs for travel, learning Spanish, and computer
+        programming. I'm a believer in meditation and living a healthy lifestyle.</p>
     </div>
   </div>
-  <!-- <div style="width: 50%;margin: auto;border-style: solid" class="parallax-container">
-    <div class="parallax">
-      <img src="./assets/pics/jtall.jpeg" style="width: auto; height: auto ">
+
+  <div id="resume" class="section scrollspy white">
+    <div class="row container">
+      <p class="break"></p>
+      <h4 class="header">RESUME</h4>
+      <p class="break"></p>
+      <br></br>
+      <iframe class="iframe" src="https://drive.google.com/file/d/13nNywHj23tONn-5BuqsvXyeyw3mwbp4a/preview" width="800"
+        height="300"></iframe>
     </div>
-  </div> -->
+  </div>
 
   <div id="contact" class="section scrollspy white">
     <div class="row container">
