--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133823930-1"></script>
+  <script>window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'UA-133823930-1');</script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="ZboeseVSRP0maHgx-npS4mkwJgmjJEc3Lzi0s8u8gyI" />
