added blog link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons black-text">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#projects">PROJECTS</a></li>
-        <li><a href="#projects">BLOG</a></li>
+        <li><a href="https://wwww.arthuranteater.com">BLOG</a></li>
         <li><a href="#about">ABOUT</a></li>
         <li><a href="#resume">RESUME</a></li>
         <li><a href="#contact">CONTACT</a></li>
@@ -63,8 +63,8 @@
           <p class="white-text">Mobile web application that provides a 5-day weather forecast</p>
         </div>
         <div id="two" class="carousel-item black-text" href="#two!">
-          <a href="https://moviebuddy.surge.sh/" target="_blank"><img src="./assets/logos/movie-buddy-logo.png" alt="movie buddy logo"
-              style="width: 500px; height: auto"></a>
+          <a href="https://moviebuddy.surge.sh/" target="_blank"><img src="./assets/logos/movie-buddy-logo.png"
+              alt="movie buddy logo" style="width: 500px; height: auto"></a>
           <div>
             <img src="./assets/logos/movie-buddy-select.png" alt="movie buddy logo" style="width: 250px; height: auto">
           </div>
@@ -100,7 +100,8 @@
 
       <span class="about"></span>
 
-      <p>Shortly after graduating college, I started my own insurance agency, <a class="inline-link" href="http://wwww.healthadvising.com">Applegate
+      <p>Shortly after graduating college, I started my own insurance agency, <a class="inline-link"
+          href="http://wwww.healthadvising.com">Applegate
           Consulting</a>. After growing my
         practice for 7 years, I was ready for a new challenge. I've always enjoyed problem solving and building
         things.
@@ -188,15 +189,15 @@
     <footer class="page-footer">
       <div class="footer-copyright">
         <div class="container">
-          © 2019 Copyright
+          © 2019 Copyright | huntCodes
         </div>
       </div>
     </footer>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./app.js"></script>
 </body>
 
