added blog link2

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons black-text">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#projects">PROJECTS</a></li>
-        <li><a href="https://wwww.arthuranteater.com">BLOG</a></li>
+        <li><a href="https://www.arthuranteater.com">BLOG</a></li>
         <li><a href="#about">ABOUT</a></li>
         <li><a href="#resume">RESUME</a></li>
         <li><a href="#contact">CONTACT</a></li>
