--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="ZboeseVSRP0maHgx-npS4mkwJgmjJEc3Lzi0s8u8gyI" />
-  <title>Hunt Applegate: A Web Developer</title>
+  <title>Hunt Applegate - Software Engineer</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <!-- <link type="text/css" rel="stylesheet" href="./materialize/css/materialize.css" media="screen,projection" /> -->
@@ -30,7 +30,7 @@
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons black-text">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#projects">PROJECTS</a></li>
-        <li><a href="https://www.arthuranteater.com">BLOG</a></li>
+        <li><a href="https://www.arthuranteater.com" target="_blank">BLOG</a></li>
         <li><a href="#about">ABOUT</a></li>
         <li><a href="#resume">RESUME</a></li>
         <li><a href="#contact">CONTACT</a></li>
@@ -42,7 +42,7 @@
 
   <ul class="sidenav" id="mobile-demo">
     <li><a href="#projects">PROJECTS</a></li>
-    <li><a href="#projects">BLOG</a></li>
+    <li><a href="https://www.arthuranteater.com" target="_blank">BLOG</a></li>
     <li><a href="#about">ABOUT</a></li>
     <li><a href="#resume">RESUME</a></li>
     <li><a href="#contact">CONTACT</a></li>
